# TracimDaemonSDK_Python

./: .gitignore  README.md  pyproject.toml
src/miniclient/: miniclient.py
src/tracim_daemon_sdk/: __init__.py  daemon_event.py  data.py  event.py  helper.py  sdk.py
