[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracim_daemon_sdk"
version = "1.0.0"
authors = [
  { name="Millefeuille", email="1kfeuille@mlabouri.fr" },
]
description = "An SDK for the TracimDaemon project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Millefeuille42/TracimDaemonSDK_Python"
"Bug Tracker" = "https://github.com/Millefeuille42/TracimDaemonSDK_Python/issues"
